Move mobile caret outside of button to fix alignment

--- a/src/main/content/_assets/css/openliberty.scss
+++ b/src/main/content/_assets/css/openliberty.scss
@@ -740,14 +740,18 @@ a {
                 & button {
                     width: 100%;
                     text-align: left;
-                    box-shadow: none;
-
-                    & .mobile_caret {
-                        display: block;
-                        pointer-events: none;
-                        float: right;
-                    }
+                    box-shadow: none;                    
                 }  
+
+                & .mobile_caret {
+                    display: block;
+                    pointer-events: none;
+                    float: right;
+
+                    position: absolute;
+                    right: 21px;
+                    top: 5px;
+                }
                 
                 /* Override default color with the same specificity */
                 .navbar-default .navbar-nav > li > a {
